# mie443

./: .clangd  .gitignore  LICENSE.md  README.md  VM_SETUP.md  contest2_test.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
detected_tags/: box_guesses.txt
gen_maps/: thurs_contest1_group7_trial1.pgm  thurs_contest1_group7_trial1.yaml  thurs_contest1_group7_trial2.pgm  thurs_contest1_group7_trial2.yaml
mie443_contest_1/src/: contest1.cpp
mie443_contest_1/worlds/: practice_map.yaml
src/contest2_testbench/: CMakeLists.txt  README.md  package.xml
src/contest2_testbench/include/contest2_testbench/: testbench.h  testrunner.h
src/contest2_testbench/launch/: run_testbench.launch
src/contest2_testbench/src/: testbench.cpp  testrunner.cpp
src/mie443_contest2/: CMakeLists.txt  README.md
src/mie443_contest2/include/: contest2.h  imagePipeline.h
src/mie443_contest2/maps/: 443_contest2_practice.pgm  443_contest2_practice.yaml
src/mie443_contest2/src/: boxes.cpp  contest2.cpp  imagePipeline.cpp  lidar.cpp  navigation.cpp  robot_pose.cpp  state.cpp  state_machine.cpp  utils.cpp
src/mie443_contest3/: CMakeLists.txt  README.md
src/mie443_contest3/src/: callbacks.cpp  contest3.cpp  imageTransporter.cpp  state.cpp  state_machine.cpp  statemachine.cpp
src/mie443_contest_1/: CMakeLists.txt  README.md  package.xml
src/mie443_contest_1/include/: callbacks.h  contest1.h  eStop.h  pathfind.h  state.h
src/mie443_contest_1/launch/: gmapping.launch  turtlebot_world.launch
src/mie443_contest_1/src/: callbacks.cpp  contest1.cpp  pathfind.cpp  state.cpp
(+18 files in other folders)
